--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 4.0.0)
-project(C-wars)
-add_executable(${PROJECT_NAME} main.c libs/string.c libs/conversor.c libs/gameRules.c libs/hashMap.c)
+project(C-wars VERSION 0.1.0)
 find_package(Curses REQUIRED)
+set (CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
 include_directories(${CURSES_INCLUDE_DIR})
+add_executable(${PROJECT_NAME} main.c libs/string.c libs/conversor.c libs/hashMap.c libs/gameRules.c)
 target_link_libraries(C-wars ${CURSES_LIBRARIES})
-install(TARGETS C-wars DESTINATION bin)
+install(TARGETS ${PROJECT_NAME} DESTINATION bin)
+set(CPACK_ARCHIVE_COMPONENT_INSTALL 1)
+	include(CPack)
+
